[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1"  }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8.3"
crossbeam = "0.8"
tarpc = { version = "0.33.0", features = ["full"] }
anyhow = "1.0"
tarpc-plugins = "0.12.0"
dashmap = "5.4.0"
easybench = "1.1.1"

[[bin]]
name="async-chain"
path="src/async_chain.rs"

[[bin]]
name="oneshot-perf"
path="channel/oneshot_perf.rs"

[[bin]]
name="learn-tarpc"
path="tarpc/learn_tarpc.rs"

[[bin]]
name="learn-tcp"
path="tcp/learn_tcp.rs"
